# tutorial-rag

./: .gitignore  01. DASAR DASAR LANGCHAIN.ipynb  02. RAG Keyword Match dengan Langchain.ipynb  03. RAG advanced dengan Langchain.ipynb  04. DASAR DASAR LANGGRAPH.ipynb  05. BRANCHING LANGGRAPH.ipynb  06. MULTIAGENT LANGGRAPH.ipynb  07. RAG LANGGRAPH.ipynb  08. TUTORIAL MARKITDOWN.ipynb  09. TUTORIAL PYMUPDF4LLM.ipynb  10. TUTORIAL DOCLING.ipynb  11. TUTORIAL FIXED SIZE CHUNKING.ipynb  12. TUTORIAL RECURSIVE CHUNKING.ipynb  13. TUTORIAL SEMANTIC CHUNKING.ipynb  14. TUTORIAL LATE CHUNKING.ipynb  15. TUTORIAL METADATA TAGGING.ipynb  16. TUTORIAL UPSTAGE DOCUMENT PARSE.ipynb  17. TUTORIAL LLAMAPARSE.ipynb  18. TUTORIAL COLPALI.ipynb  19. TUTORIAL VOYAGEAI.ipynb  20. TUTORIAL QDRANT COLLECTIONS.ipynb  21. TUTORIAL VECTOR SEARCH.ipynb  22. TUTORIAL ADVANCED FILTERING QDRANT.ipynb  complaint_handling.txt  main.py  pyproject.toml
documents/: bandung.md  company_profile.txt  file-example-xls.xls  product_profile.txt  sample-contract.md
documents/voyage-ai-input/: braga.txt  farm-house.txt  gedung-sate.txt  kawah-putih.txt  tangkuban-parahu.txt
