[project]
name = "tutorial-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chonkie[all]>=1.4.0",
    "docling>=2.58.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "jsonextractor>=0.0.2",
    "jupyter>=1.1.1",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.0",
    "llama-cloud-services>=0.6.79",
    "markitdown[all]>=0.1.3",
    "notebook>=7.4.7",
    "pymupdf4llm>=0.0.27",
    "qdrant-client>=1.15.1",
    "typing>=3.10.0.0",
    "voyageai>=0.3.5",
]
